--- a/index.html
+++ b/index.html
@@ -16,20 +16,186 @@
 
 <body>
     <div class="main-container">
-        <header></header>
+
+        <!-- HEADER -->
+        <header>
+            <img src="images/logo/Booki.png" alt="Logo Booki" width="61px" height="19px">
+            <nav>
+                <a href="#hebergements">Hébergements</a>
+                <a href="#activities">Activités</a>
+            </nav>
+        </header>
+
+        <!-- MAIN -->
         <main>
+            <!-- RESEARCH -->
+            <section class="search-place">
+                <div>
+                    <h2 class="section-title">Trouvez votre hébergement pour des vacances de rêve</h2>
+                    <p>En plein centre ville ou en pleine nature</p>
+                </div>
+
+                <div class="barre-de-recherche">
+                    <label for="maRecherche">
+                        <i class="fa-solid fa-location-dot"></i>
+                    </label>
+                    <input type="search" id="maRecherche" name="q" placeholder="Où allez-vous ?">
+                    <button>
+                        <span class="text">Rechercher</span>
+                        <span class="icone"><i class="fa-solid fa-magnifying-glass"></i></span>
+                    </button> <!-- Penser à regarder pour ajouter l'icone -->
+                </div>
+
+                <div class="filtres">
+                    <p>Filtres</p>
+                    <form class="categories">
+                        <input type="checkbox" id="economique" name="type" class="selected">
+                        <label for="economique">
+                            <i class="fa-solid fa-money-bill-wave"></i> Economique
+                        </label>
+                        <input type="checkbox" id="familial" name="type" class="selected">
+                        <label for="familial">
+                            <i class="fa-solid fa-person"></i> Familial
+                        </label>
+                        <input type="checkbox" id="romantique" name="type" class="selected">
+                        <label for="romantique">
+                            <i class="fa-solid fa-heart"></i> Romantique
+                        </label>
+                        <input type="checkbox" id="pepites" name="type" class="selected">
+                        <label for="pepites">
+                            <i class="fa-solid fa-fire"></i> Nos pépites
+                        </label>
+                    </form>
+                </div>
+                <div class="places-number">
+                    <i class="fa-solid fa-info"></i>
+                    <p>Plus de 500 logements sont disponibles dans cette villes</p>
+                </div>
+            </section>
+
+            <!-- HOSTS & FAME PLACES -->
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
-
+                    <div class="hebergements-title">
+                        <h2 id="hebergements" class="section-title">Hébergements à Marseille</h2>
+                    </div>
+                    <div class="hebergements-find">
+                        <a href="" class="card image-1">
+                            <article>
+                                <img src="./images/hebergements/fred-kleber.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <h3 class="card-title">Hôtel du port</h3>
+                                    <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="false"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                        <a href="" class="card image-2">
+                            <article>
+                                <img src="./images/hebergements/febrian-zakaria.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <h3 class="card-title">Hôtel Chez Amina</h3>
+                                    <p class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="false"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                        <a href="" class="card image-3">
+                            <article>
+                                <img src="./images/hebergements/reisetopia.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <h3 class="card-title">Hôtel Les mouettes</h3>
+                                    <p class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></p>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="false"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                        <a href="" class="card image-4">
+                            <article>
+                                <img src="./images/hebergements/annie-spratt.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <h3 class="card-title">Hôtel de la mer</h3>
+                                    <p class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="false"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                        <a href="" class="card image-5">
+                            <article>
+                                <img src="./images/hebergements/marcus-loke.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <h3 class="card-title">Auberge La Canebière</h3>
+                                    <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="false"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                        <a href="" class="card image-6">
+                            <article>
+                                <img src="./images/hebergements/nicate-lee.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
+                                    <h3 class="card-title">Auberge Le Panier</h3>
+                                    <p class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
+                                    <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="false"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
+                    </div>
+                    <div class="affichage">
+                        <p>Affichez plus</p>
+                    </div>
                 </section>
+
                 <section class="populaires">
                     <div class="populaires-title">
                         <h2 class="section-title">Les plus populaires</h2>
                         <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
                     </div>
                     <div class="populaires-cards">
-                        <article class="card">
-                            <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                        <a href="" class="card">
+                            <img src="./images/hebergements/emile-guillemot.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card-content">
                                 <div class="card-txt">
                                     <h3 class="card-title">Hôtel Le soleil du matin</h3>
@@ -39,14 +205,14 @@
                                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star" aria-hidden="false"></i>
                                     <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                     <span class="sr-only">Note de 4 sur 5</span>
                                 </div>
                             </div>
-                        </article>
-                        <article class="card">
-                            <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                        </a>
+                        <a href="" class="card">
+                            <img src="./images/hebergements/aw-creative.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card-content">
                                 <div class="card-txt">
                                     <h3 class="card-title">Chambres d’hôtes Au cœur de l’eau</h3>
@@ -61,9 +227,9 @@
                                     <span class="sr-only">Note de 4 sur 5</span>
                                 </div>
                             </div>
-                        </article>
-                        <article class="card">
-                            <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                        </a>
+                        <a href="" class="card">
+                            <img src="./images/hebergements/febrian-zakaria2.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card-content">
                                 <div class="card-txt">
                                     <h3 class="card-title">Hôtel Bleu et Blanc</h3>
@@ -78,12 +244,70 @@
                                     <span class="sr-only">Note de 4 sur 5</span>
                                 </div>
                             </div>
-                        </article>
+                        </a>
                     </div>
                 </section>
             </div>
+
+            <!-- ACTIVITIES -->
+            <div class="activities">
+                <div class="activities-title">
+                    <h2 id="activities" class="section-title">Activités à Marseilles</h2>
+                </div>
+                <div class="activities-offer">
+                    <a href="" class="place-to-be">
+                        <img src="./images/activities/reno-laithienne.jpeg" alt="Image d'un port">
+                        <div class="place-to-be-title">
+                            <p>Vieux-port</p>
+                        </div>
+                    </a>
+                    <a href="" class="place-to-be">
+                        <img src="./images/activities/paul-hermann.jpeg" alt="Image du fort">
+                        <div class="place-to-be-title">
+                            <p>Fort de Pomègues</p>
+                        </div>
+                    </a>
+                    <a href="" class="place-to-be">
+                        <img src="./images/activities/kilyan-sockalingum.jpeg" alt="Image de paysage">
+                        <div class="place-to-be-title">
+                            <p>Parc national des Calanques</p>
+                        </div>
+                    </a>
+                    <a href="" class="place-to-be">
+                        <img src="./images/activities/florian-wehde.jpeg" alt="Image d'une ville">
+                        <div class="place-to-be-title">
+                            <p>Notre-Dame-de-la-Garde</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </main>
-        <footer></footer>
+
+        <!-- FOOTER -->
+        <footer>
+            <div class="pied-de-page">
+                <p>A propos</p>
+                <ul>
+                    <li>Fonctionnement du site</li>
+                    <li>Conditions générales</li>
+                    <li>Données et confidentialité</li>
+                </ul>
+            </div>
+            <div class="pied-de-page">
+                <p>Nos hébergements</p>
+                <ul>
+                    <li>Charte qualité</li>
+                    <li>Proposer votre hôtel</li>
+                </ul>
+            </div>
+            <div class="pied-de-page">
+                <p>Assistance</p>
+                <ul>
+                    <li>Centre d'aide</li>
+                    <li>Nous contacter</li>
+                </ul>
+            </div>
+        </footer>
     </div>
 </body>
 
