--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <button>
                         <span class="text">Rechercher</span>
                         <span class="icone"><i class="fa-solid fa-magnifying-glass"></i></span>
-                    </button> <!-- Penser à regarder pour ajouter l'icone -->
+                    </button>
                 </div>
 
                 <div class="filtres">
