--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <!-- HEADER -->
         <header>
-            <img src="images/logo/Booki.png" alt="Logo Booki" width="61px" height="19px">
+            <img src="images/logo/Booki.png" alt="Logo Booki" class="logo">
             <nav>
                 <a href="#hebergements">Hébergements</a>
                 <a href="#activities">Activités</a>
@@ -68,7 +68,7 @@
                     </form>
                 </div>
                 <div class="places-number">
-                    <i class="fa-solid fa-info"></i>
+                    <i class="fa-xs fa-solid fa-info"></i>
                     <p>Plus de 500 logements sont disponibles dans cette villes</p>
                 </div>
             </section>
@@ -80,103 +80,103 @@
                         <h2 id="hebergements" class="section-title">Hébergements à Marseille</h2>
                     </div>
                     <div class="hebergements-find">
-                        <a href="" class="card image-1">
-                            <article>
-                                <img src="./images/hebergements/fred-kleber.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
-                                <div class="card-content">
-                                    <h3 class="card-title">Hôtel du port</h3>
-                                    <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
-                                    <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="false"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                        <a href="" class="image-1">
+                            <article class="find">
+                               <img src="./images/hebergements/fred-kleber.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
+                               <div class="find-content">
+                                    <h3 class="find-title">Hôtel du port</h3>
+                                    <p class="find-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
+                                    <div class="find-rating">
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
-                                </div>
+                               </div>
                             </article>
                         </a>
-                        <a href="" class="card image-2">
-                            <article>
+                        <a href="" class="image-2">
+                            <article class="find">
                                 <img src="./images/hebergements/febrian-zakaria.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
-                                <div class="card-content">
-                                    <h3 class="card-title">Hôtel Chez Amina</h3>
-                                    <p class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
-                                    <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="false"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                <div class="find-content">
+                                    <h3 class="find-title">Hôtel Chez Amina</h3>
+                                    <p class="find-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
+                                    <div class="find-rating">
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
                             </article>
                         </a>
-                        <a href="" class="card image-3">
-                            <article>
+                        <a href="" class="image-3">
+                            <article class="find">
                                 <img src="./images/hebergements/reisetopia.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
-                                <div class="card-content">
-                                    <h3 class="card-title">Hôtel Les mouettes</h3>
-                                    <p class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></p>
-                                    <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="false"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                <div class="find-content">
+                                    <h3 class="find-title">Hôtel Les mouettes</h3>
+                                    <p class="find-subtitle">Nuit à partir de 76<span class="euro">€</span></p>
+                                    <div class="find-rating">
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
                             </article>
                         </a>
-                        <a href="" class="card image-4">
-                            <article>
+                        <a href="" class="image-4">
+                            <article class="find">
                                 <img src="./images/hebergements/annie-spratt.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
-                                <div class="card-content">
-                                    <h3 class="card-title">Hôtel de la mer</h3>
-                                    <p class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
-                                    <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="false"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                <div class="find-content">
+                                    <h3 class="find-title">Hôtel de la mer</h3>
+                                    <p class="find-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
+                                    <div class="find-rating">
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
                             </article>
                         </a>
-                        <a href="" class="card image-5">
-                            <article>
+                        <a href="" class="image-5">
+                            <article class="find">
                                 <img src="./images/hebergements/marcus-loke.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
-                                <div class="card-content">
-                                    <h3 class="card-title">Auberge La Canebière</h3>
-                                    <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
-                                    <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="false"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                <div class="find-content">
+                                    <h3 class="find-title">Auberge La Canebière</h3>
+                                    <p class="find-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
+                                    <div class="find-rating">
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
                             </article>
                         </a>
-                        <a href="" class="card image-6">
-                            <article>
+                        <a href="" class="image-6">
+                            <article class="find">
                                 <img src="./images/hebergements/nicate-lee.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
-                                <div class="card-content">
-                                    <h3 class="card-title">Auberge Le Panier</h3>
-                                    <p class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
-                                    <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="false"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                <div class="find-content">
+                                    <h3 class="find-title">Auberge Le Panier</h3>
+                                    <p class="find-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
+                                    <div class="find-rating">
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
@@ -194,8 +194,8 @@
                         <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
                     </div>
                     <div class="populaires-cards">
-                        <a href="" class="card">
-                            <article>
+                        <a href="">
+                            <article class="card">
                                 <img src="./images/hebergements/emile-guillemot.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -206,15 +206,15 @@
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="false"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
                             </article>
                         </a>
-                        <a href="" class="card">
-                            <article>
+                        <a href="">
+                            <article class="card">
                                 <img src="./images/hebergements/aw-creative.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
@@ -232,8 +232,8 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="" class="card">
-                            <article>
+                        <a href="">
+                            <article class="card">
                                 <img src="./images/hebergements/febrian-zakaria2.jpeg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
                                     <div class="card-txt">
