--- a/index.html
+++ b/index.html
@@ -35,15 +35,17 @@
                     <p>En plein centre ville ou en pleine nature</p>
                 </div>
 
-                <div class="barre-de-recherche">
-                    <label for="maRecherche">
-                        <i class="fa-solid fa-location-dot"></i>
-                    </label>
-                    <input type="search" id="maRecherche" name="q" placeholder="Où allez-vous ?">
-                    <button>
-                        <span class="text">Rechercher</span>
-                        <span class="icone"><i class="fa-solid fa-magnifying-glass"></i></span>
-                    </button>
+                <div class="recherche">
+                    <form class="barre-de-recherche">
+                        <label for="maRecherche">
+                            <i class="fa-solid fa-location-dot"></i>
+                        </label>
+                        <input type="text" id="maRecherche" name="q" placeholder="Où allez-vous ?"> 
+                        <button>
+                            <span class="text">Rechercher</span>
+                            <span class="icone"><i class="fa-solid fa-magnifying-glass"></i></span>
+                        </button>
+                    </form>
                 </div>
 
                 <div class="filtres">
@@ -91,7 +93,7 @@
                                         <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-sm fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-sm fa-solid fa-star" aria-hidden="true" aria-hidden="true"></i>
+                                        <i class="fa-sm fa-solid fa-star neutral-star" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                </div>
